log
Tue 11 Apr 2023 10:51:30 PM UTC: 
 tests:  0|6
total_score: 0/70
9e5e718
Wed 19 Apr 2023 11:48:55 PM UTC: 
 hashmap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
9509e31
Wed 19 Apr 2023 11:50:57 PM UTC: 
 hashmap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:70:1: error: expected identifier or ‘(’ before ‘}’ token
   70 | }
      | ^
Compilation failed
b072542
Wed 19 Apr 2023 11:51:35 PM UTC: 
 hashmap.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
 tests:  5|4
total_score: 30/70
2871f04
Wed 19 Apr 2023 11:55:36 PM UTC: 
 hashmap.c | 40 +++++++++++++++++++++++++++++++++-------
 1 file changed, 33 insertions(+), 7 deletions(-)
test.c: In function ‘searchMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4eb5e8c
Wed 19 Apr 2023 11:56:39 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘searchMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b9ccae
Wed 19 Apr 2023 11:57:06 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c: In function ‘searchMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ca3998
Wed 19 Apr 2023 11:57:34 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
22b69ab
Wed 19 Apr 2023 11:58:01 PM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  8|3
total_score: 40/70
9db2cdd
Wed 19 Apr 2023 11:59:05 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
c37ad7c
Thu 20 Apr 2023 12:02:34 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:102:28: error: statement with no effect [-Werror=unused-value]
  102 |     map->buckets[pos]->key == NULL;
      |                            ^
cc1: all warnings being treated as errors
Compilation failed
1bd662f
Thu 20 Apr 2023 12:02:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
6410d38
Thu 20 Apr 2023 12:04:28 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
424bf14
Thu 20 Apr 2023 12:04:38 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 40/70
aa0f712
Thu 20 Apr 2023 12:05:21 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
df0fd9b
Thu 20 Apr 2023 12:06:38 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  13|2
total_score: 50/70
dbc6973
Thu 20 Apr 2023 12:07:10 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:165:1: error: control reaches end of non-void function [-Werror=return-type]
  165 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd15381
Thu 20 Apr 2023 12:07:16 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:165:1: error: control reaches end of non-void function [-Werror=return-type]
  165 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d5290f3
